# cli_password_manager

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  constants.py  main.py  manager.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py
cli/: menu.py
cli_password_manager/: main.py
cli_password_manager/cli/: menu.py
cli_password_manager/core/: auth.py  constants.py  encrypter.py  exception.py  manager.py
cli_password_manager/tests/: test_cli.py  test_password_manager.py
cli_password_manager/utils/: logger.py
core/: auth.py  constants.py  encrypter.py  manager.py
tests/: test_cli.py
utils/: logger.py  storage.py
