[project]
name = "cli-password-manager"
version = "0.1.0"
description = "CLI Password Manager"
requires-python = ">=3.10"

[project.scripts]
password-manager = "cli_password_manager.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
